# OS

./: OS_LAB1.docx
KP/: CMakeLists.txt
KP/report/: KP-report.docx
KP/src/: server.cpp
lab1/: CMakeCache.txt  Makefile  cmake_install.cmake  main  report.docx
lab1/doc/: .~lock.report.docx#
lab1/src/: main  main.cpp
lab2/: CMakeLists.txt  report.docx
lab2/doc/: report.docx
lab2/src/: main  main.cpp
lab3/: CMakeLists.txt  lab3.docx
lab3/doc/: lab3.docx
lab3/src/: main  main.cpp  out
lab4/: CMakeLists.txt  lab4-report.docx
lab4/src/: config.h  lib1.cpp  lib2.cpp  main1.cpp  main2.cpp
lab5_7/: CMakeLists.txt  OS_Lab6.docx
lab5_7/src/: main.cpp
lab8/: OS_Lab8.docx
